force-app/main/default/objects/Fuel_Request__c/Fuel_Request__c.object-meta.xml
<CustomObject>
    <label>Fuel Request</label>
    <nameField>
        <displayFormat>FR-{0000}</displayFormat>
        <label>Fuel Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fuel Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>