force-app/main/default/objects/Fuel_Request__c/fields/Fuel_Operator__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Operator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fuel Operator</label>
    <referenceTo>Ground_Crew__c</referenceTo>
    <relationshipLabel>Fuel Requests</relationshipLabel>
    <relationshipName>Fuel_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>