force-app/main/default/objects/Fuel_Request__c/fields/Fuel_Quantity_Liters__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Quantity_Liters__c</fullName>
    <label>Fuel Quantity (Liters)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>