force-app/main/default/objects/Fuel_Request__c/validationRules/Completion_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>Completion_Time</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(Request_Time__c)),
NOT(ISBLANK(Completion_Time__c)),
Completion_Time__c &lt;= Request_Time__c
)</errorConditionFormula>
    <errorDisplayField>Completion_Time__c</errorDisplayField>
    <errorMessage>Completion Time must be after Request Time.</errorMessage>
</ValidationRule>